# feedspool-rs

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
migrations/2021-05-06-042355_create_feeds_and_entries/: down.sql  up.sql
migrations/2021-05-07-224917_add_etag_and_lastmod_to_history/: down.sql  up.sql
migrations/2021-05-07-230429_drop_status_text/: down.sql  up.sql
migrations/2021-05-09-041736_add_history_errors/: up.sql
migrations/2021-05-10-230753_add_updated_feed_entry_date/: down.sql  up.sql
migrations/2021-05-25-024424_last_entry_published/: down.sql  up.sql
src/: cli.rs  db.rs  feeds.rs  gql.rs  lib.rs  main.rs  models.rs  schema.rs
src/cli/: config.rs  logging.rs  mod.rs  subcommands.rs
src/cli/subcommands/: check.rs  fetch.rs  mod.rs  render.rs  serve.rs  toplinks.rs
src/db/: paginate_dsl.rs
src/feeds/: db.rs  mod.rs  result.rs
src/gql/: mutation.rs  query.rs
www/: components.js  config.js  dom.js  gql.js  index.css  index.html  index.js
www/lib/: components.js  dom.js  gql.js
