[package]
name = "feedspool"
version = "0.1.0"
description = "A utility for regularly fetching feeds from the web"
authors = ["Les Orchard <me@lmorchard.com>"]
edition = "2018"
repository = "https://github.com/lmorchard/telnet-gateway-menu/"
license = "MIT"
categories = [ "command-line-interface", "command-line-utilities" ]
keywords = [ "telnet", "bbs" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
config = "0.11"
diesel = { version = "1.4.6", features = ["sqlite"] }
dotenv = "0.15.0"
env_logger = "0.8"
exitfailure = "0.5.1"
feed-rs = "0.6.0"
json = "0.12.4"
log = "0.4"
reqwest = "0.11.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
xml-rs = "0.8.3"
futures = "0.3.14"
chrono = "0.4.19"

[lib]
name = "feedspool"
path = "src/lib.rs"

