[package]
authors = ["Les Orchard <me@lmorchard.com>"]
categories = ["command-line-interface", "command-line-utilities"]
description = "A utility for regularly fetching feeds from the web"
edition = "2018"
keywords = ["rss", "feeds"]
license = "MIT"
name = "feedspool-rs"
repository = "https://github.com/lmorchard/feedspool-rs/"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "3.0.0-beta.2"
config = "0.11"
diesel = {version = "1.4.6", features = ["sqlite", "chrono"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.8"
exitfailure = "0.5.1"
feed-rs = "0.6.0"
futures = "0.3.14"
json = "0.12.4"
libsqlite3-sys = {version = "0.17.3", features = ["bundled"]}
log = "0.4"
reqwest = "0.11.3"
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
sha2 = "0.9.4"
tokio = {version = "1", features = ["full"]}
toml = "0.5"
xml-rs = "0.8.3"

[lib]
name = "feedspool"
path = "src/lib.rs"
