[package]
authors = ["Les Orchard <me@lmorchard.com>"]
categories = ["command-line-interface", "command-line-utilities"]
description = "A utility for regularly fetching feeds from the web"
edition = "2018"
keywords = ["rss", "feeds"]
license = "MIT"
name = "feedspool-rs"
repository = "https://github.com/lmorchard/feedspool-rs/"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "3.0.0-beta.2"
config = "0.11"
diesel = {version = "1.4.6", features = ["sqlite", "chrono", "r2d2"]}
diesel_migrations = "1.4.0"
env_logger = "0.8"
#feed-rs = "0.6.0"
#feed-rs = {path = "../feed-rs/feed-rs", features = ["model_serde"]}
feed-rs = {git = "https://github.com/lmorchard/feed-rs", branch = "serde-restore", features = ["model_serde"]}
futures = "0.3.14"
json = "0.12.4"
libsqlite3-sys = {version = "0.17.3", features = ["bundled"]}
log = "0.4"
reqwest = "0.10"
scraper = "0.12.0"
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
sha2 = "0.9.4"
time = "0.1"
tinytemplate = "1.2.1"
r2d2 = "0.8.9"
toml = "0.5"
url = "2.2.2"
xml-rs = "0.8.3"

hyper = "0.13"
hyper-staticfile = "0.5.3"
juniper = {version = "0.15.5", default-features = false, features = ["chrono"]}
juniper_hyper = "0.7.0"
tokio = {version = "0.2", features = ["full"]}

[lib]
name = "feedspool"
path = "src/lib.rs"
